# bharterp_theme

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
bharterp_theme/: hooks.py  install.py
bharterp_theme/client_script/: customer_gstin_validate.json  supplier_gstin_validate.json
bharterp_theme/custom_reports/gst_filing_status/: gst_filing_status.json  gst_filing_status.py
bharterp_theme/custom_reports/msme_payment_report/: msme_payment_report.json  msme_payment_report.py
bharterp_theme/custom_reports/sales_commission_report/: sales_commission_report.json  sales_commission_report.py
bharterp_theme/dashboard/: bharterp_dashboard.json
bharterp_theme/email_template/asset_assigned/: response.html  subject.txt
bharterp_theme/email_template/dunning_notice/: response.html  subject.txt
bharterp_theme/email_template/expense_approval/: response.html  subject.txt
bharterp_theme/email_template/full_final_settlement/: response.html  subject.txt
bharterp_theme/email_template/gst_reminder/: response.html  subject.txt
bharterp_theme/email_template/interview_scheduled/: response.html  subject.txt
bharterp_theme/email_template/invoice_to_customer/: response.html  subject.txt
bharterp_theme/notification/: low_stock_alert.json  order_confirmation.json  payment_overdue.json  payment_reminder_3day.json  po_to_vendor.json  quotation_sent.json  salary_slip_email.json
bharterp_theme/print_format/asset/: asset.html
bharterp_theme/server_script/: gst_filing_reminder.json  msme_payment_alert.json  reorder_alert.json
(+77 files in other folders)
